# my_repo

./: biolab_orange3.csv  env_snapshot.7z  orange3_input-default.jsonl
env_snapshot/: apt_packages.txt  env_vars.txt  filesystem_tree.txt  pip_freeze.txt  run_tests.sh
mh/: .gitignore  README.md  README_deveploer.md  pyproject.toml  requirements.txt  test_client.py
mh/mindforge_harness/: consts.py  evaluate.py  logger.py  main.py  produce.py  run_instance.py  server.py  utils.py
mh/mindforge_harness/docker/: consts.py  docker_utils.py  image_builder.py
mh/mindforge_harness/docker/additional/: install.sh
mh/mindforge_harness/docker/certificates/: hwweb.pem
mh/tests/: __init__.py  conftest.py  test_evaluate.py  test_produce.py  test_utils.py
mh/tests/test_data/: eval_test_data.jsonl  five_instances.jsonl  one_sample.jsonl  produce_test_data.jsonl  timeout_data.jsonl
